--- a/TopBike Hw/Frontend/TopBike/package.json
+++ b/TopBike Hw/Frontend/TopBike/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.6",
     "styled-components": "^6.1.6",
